--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:  
-      name: hello-svc
+  name: hello-svc
 spec:  
   selector: 
     role: app  
@@ -10,4 +10,4 @@ spec:
       port: 80      
       targetPort: 8080      
       nodePort: 32000  
-      type: NodePort
+      #type: NodePort
